# jackclient-python

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS  NEWS.rst  README.rst  jack.py  jack_build.py  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  test.yml
doc/: Makefile  api.rst  conf.py  examples.rst  fake__jack.py  fake_cffi.py  index.rst  installation.rst  make.bat  other-modules.rst  requirements.txt  usage.rst
examples/: HochzeitsMedley_final.midi  aliases.py  allOutputs.py  chatty_client.py  metadata.py  midi_chords.py  midi_file_player.py  midi_monitor.py  midi_sine.py  midi_sine_numpy.py  more_pythonic_client.py  play_file.py  showtime.py  slow_sync.py  test_alias.py  thru_client.py  timebase_master.py  transporter.py
src/: jack.py
