[build-system]
requires = ["setuptools", "setuptools-scm", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "JACK-Client"
license = "MIT"
dynamic = ["version"]
description = "JACK Audio Connection Kit (JACK) Client for Python"
readme = "README.rst"
keywords = ["JACK", "audio", "low-latency", "multi-channel"]
authors = [{ name = "Matthias Geier", email = "Matthias.Geier@gmail.com" }]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.7"
dependencies = ["cffi"]

[project.urls]
Documentation = "http://jackclient-python.readthedocs.io/"
Repository = "https://github.com/spatialaudio/jackclient-python/"
Issues = "https://github.com/spatialaudio/jackclient-python/issues"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "doc" }]
test = ["pytest"]
doc = [
  "insipid-sphinx-theme",
  "sphinx-last-updated-by-git",
]

[tool.setuptools]
py-modules = ["jack"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "jack.__version__" }
